Fix task title on mobile (#54)
Use a contenteditable for task title to make it look good on mobile

Reviewed-on: https://kolaente.dev/vikunja/frontend/pulls/54

--- a/src/styles/components/task.scss
+++ b/src/styles/components/task.scss
@@ -46,6 +46,10 @@
       padding: 0 .3em;
     }
 
+    h1.input.title {
+      height: auto;
+    }
+
     .is-done {
       background: $green;
       color: $white;
